readme fix 2.0 & media query

--- a/src/app/components/about/about.component.css
+++ b/src/app/components/about/about.component.css
@@ -79,5 +79,12 @@
     .about-container p {
       font-size: 16px;
     }
+
+    .about-buttons .btn{
+      font-size : 14px;
+      padding: 5px 10px;
+    }
   }
-  
+
+
+   
